--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 
       </div>
       <div class="site-header__menu-content">
-        <div class="site-header__btn-container"> <a href="#" class="btn">Get in Touch</a></div>
+        <div class="site-header__btn-container"> <a href="#" class="btn open-modal">Get in Touch</a></div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
             <li><a href="#our-beginning" id="our-beginning-link">Our Beginning</a></li>
@@ -58,7 +58,7 @@
         <h1 class="large-hero__title">Your clarity.</h1>
         <h2 class="large-hero__subtitle">One trip away.</h2>
         <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-        <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
+        <p><a href="#" class="btn btn--orange btn--large open-modal">Get Started Today</a></p>
       </div>
     </div>
   </div>
@@ -215,10 +215,36 @@
   <footer class="site-footer">
     <div class="wrapper">
       <p> <span class="site-footer__text"> Copyright &copy; 2016 Clear View Escapes. All rights reserved. </span><a
-          href="#" class="btn btn--orange">Get in
+          href="#" class="btn btn--orange open-modal">Get in
           Touch</a></p>
     </div>
   </footer>
+
+  <div class="modal">
+    <div class="modal__inner">
+      <h2 class="section-title section-title--blue section-title--less-margin">
+        <img class="icon icon--mail section-title__icon"> Get in <strong>touch</strong></h2>
+      <div class="wrapper wrapper--narrow">
+        <p class="modal__description"> We well take care of u We well take care of u We well take care of u We well take
+          care of u We well take
+          care of u We well take
+          care of u</p>
+      </div>
+
+      <div class="social-icons">
+        <a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
+
+      </div>
+    </div>
+
+    <div class="modal__close">X</div>
+
+  </div>
+
+
   <script src="/temp/scripts/App.js"></script>
 </body>
 
